--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
 
     <style>
         :root {
-            --bg-dark: #0f0f1a;
+            --bg-primary: #0f0f1a;
+            --bg-secondary: #1a1a2e;
             --bg-card: rgba(255, 255, 255, 0.03);
             --accent-primary: #6c63ff;
             --accent-secondary: #00d9ff;
             --text-primary: #ffffff;
             --text-secondary: #a0a0b0;
             --border-color: rgba(255, 255, 255, 0.1);
+        }
+
+        body.light-mode {
+            --bg-primary: #f5f7fa;
+            --bg-secondary: #e8ecf1;
+            --bg-card: rgba(0, 0, 0, 0.03);
+            --text-primary: #1a1a2e;
+            --text-secondary: #5a5a6e;
+            --border-color: rgba(0, 0, 0, 0.1);
         }
 
         * {
@@ -34,13 +44,42 @@
 
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: linear-gradient(145deg, var(--bg-dark), #1a1a2e);
+            background: linear-gradient(145deg, var(--bg-primary), var(--bg-secondary));
             color: var(--text-primary);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 40px 20px;
+            transition: background 0.3s ease, color 0.3s ease;
+        }
+
+        /* Theme Toggle */
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: var(--bg-card);
+            border: 1px solid var(--border-color);
+            border-radius: 50px;
+            padding: 8px 16px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 0.9rem;
+            color: var(--text-primary);
+            transition: all 0.3s ease;
+            z-index: 1000;
+        }
+
+        .theme-toggle:hover {
+            border-color: var(--accent-primary);
+            transform: scale(1.05);
+        }
+
+        .theme-toggle .icon {
+            font-size: 1.1rem;
         }
 
         /* Header Section */
@@ -112,7 +151,7 @@
             border: 1px solid var(--border-color);
             overflow: hidden;
             box-shadow: 0 25px 80px rgba(108, 99, 255, 0.15), 0 10px 30px rgba(0, 0, 0, 0.4);
-            background: linear-gradient(180deg, #4a90d9 0%, #e8e8e8 5%); /* Match calculator header + body */
+            background: linear-gradient(180deg, #4a90d9 0%, #e8e8e8 5%);
         }
 
         .loading-text {
@@ -184,10 +223,16 @@
         @media (max-width: 700px) {
             .hero h1 { font-size: 2rem; }
             #cheerpj-display { width: 100%; max-width: 400px; height: 700px; }
+            .theme-toggle { top: 10px; right: 10px; padding: 6px 12px; font-size: 0.8rem; }
         }
     </style>
 </head>
 <body>
+
+    <button class="theme-toggle" onclick="toggleTheme()">
+        <span class="icon">🌙</span>
+        <span class="label">Dark</span>
+    </button>
 
     <header class="hero">
         <h1>Scientific Calculator</h1>
@@ -217,6 +262,24 @@
     </footer>
 
     <script>
+        // Theme Toggle Logic
+        function toggleTheme() {
+            document.body.classList.toggle('light-mode');
+            const isLight = document.body.classList.contains('light-mode');
+            const toggle = document.querySelector('.theme-toggle');
+            toggle.querySelector('.icon').textContent = isLight ? '☀️' : '🌙';
+            toggle.querySelector('.label').textContent = isLight ? 'Light' : 'Dark';
+            localStorage.setItem('theme', isLight ? 'light' : 'dark');
+        }
+
+        // Load saved theme preference
+        if (localStorage.getItem('theme') === 'light') {
+            document.body.classList.add('light-mode');
+            document.querySelector('.theme-toggle .icon').textContent = '☀️';
+            document.querySelector('.theme-toggle .label').textContent = 'Light';
+        }
+
+        // CheerpJ Initialization
         (async function() {
             await cheerpjInit();
             cheerpjCreateDisplay(602, 950, document.getElementById("cheerpj-display"));
