--- a/index.html
+++ b/index.html
@@ -54,32 +54,202 @@
             transition: background 0.3s ease, color 0.3s ease;
         }
 
-        /* Theme Toggle */
-        .theme-toggle {
+        /* Settings Button */
+        .settings-btn {
             position: fixed;
             top: 20px;
             right: 20px;
             background: var(--bg-card);
             border: 1px solid var(--border-color);
-            border-radius: 50px;
-            padding: 8px 16px;
+            border-radius: 50%;
+            width: 44px;
+            height: 44px;
             cursor: pointer;
             display: flex;
             align-items: center;
-            gap: 8px;
-            font-size: 0.9rem;
+            justify-content: center;
+            font-size: 1.3rem;
             color: var(--text-primary);
             transition: all 0.3s ease;
             z-index: 1000;
         }
 
-        .theme-toggle:hover {
+        .settings-btn:hover {
             border-color: var(--accent-primary);
-            transform: scale(1.05);
+            transform: rotate(45deg) scale(1.1);
         }
 
-        .theme-toggle .icon {
-            font-size: 1.1rem;
+        /* Modal Overlay */
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(4px);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 2000;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
+        }
+
+        .modal-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .modal {
+            background: var(--bg-secondary);
+            border: 1px solid var(--border-color);
+            border-radius: 16px;
+            padding: 30px;
+            width: 90%;
+            max-width: 400px;
+            transform: scale(0.9);
+            transition: transform 0.3s ease;
+        }
+
+        .modal-overlay.active .modal {
+            transform: scale(1);
+        }
+
+        .modal h2 {
+            font-size: 1.4rem;
+            margin-bottom: 25px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .modal-close {
+            margin-left: auto;
+            background: none;
+            border: none;
+            color: var(--text-secondary);
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: color 0.2s;
+        }
+
+        .modal-close:hover {
+            color: var(--text-primary);
+        }
+
+        /* Setting Group */
+        .setting-group {
+            margin-bottom: 25px;
+        }
+
+        .setting-label {
+            font-size: 0.9rem;
+            color: var(--text-secondary);
+            margin-bottom: 12px;
+            display: block;
+        }
+
+        /* Theme Selector */
+        .theme-options {
+            display: flex;
+            gap: 8px;
+        }
+
+        .theme-option {
+            flex: 1;
+            padding: 12px 8px;
+            border: 1px solid var(--border-color);
+            border-radius: 10px;
+            background: var(--bg-card);
+            color: var(--text-primary);
+            font-size: 0.85rem;
+            cursor: pointer;
+            text-align: center;
+            transition: all 0.2s ease;
+        }
+
+        .theme-option:hover {
+            border-color: var(--accent-primary);
+        }
+
+        .theme-option.active {
+            background: var(--accent-primary);
+            border-color: var(--accent-primary);
+            color: #fff;
+        }
+
+        .theme-option .icon {
+            display: block;
+            font-size: 1.3rem;
+            margin-bottom: 5px;
+        }
+
+        /* Toggle Switch */
+        .toggle-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 15px;
+            background: var(--bg-card);
+            border: 1px solid var(--border-color);
+            border-radius: 10px;
+        }
+
+        .toggle-text {
+            font-size: 0.9rem;
+        }
+
+        .toggle-text small {
+            display: block;
+            color: var(--text-secondary);
+            font-size: 0.75rem;
+            margin-top: 3px;
+        }
+
+        .toggle-switch {
+            position: relative;
+            width: 50px;
+            height: 28px;
+        }
+
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .toggle-slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: var(--border-color);
+            border-radius: 28px;
+            transition: 0.3s;
+        }
+
+        .toggle-slider:before {
+            position: absolute;
+            content: "";
+            height: 22px;
+            width: 22px;
+            left: 3px;
+            bottom: 3px;
+            background: white;
+            border-radius: 50%;
+            transition: 0.3s;
+        }
+
+        .toggle-switch input:checked + .toggle-slider {
+            background: var(--accent-primary);
+        }
+
+        .toggle-switch input:checked + .toggle-slider:before {
+            transform: translateX(22px);
         }
 
         /* Header Section */
@@ -223,16 +393,55 @@
         @media (max-width: 700px) {
             .hero h1 { font-size: 2rem; }
             #cheerpj-display { width: 100%; max-width: 400px; height: 700px; }
-            .theme-toggle { top: 10px; right: 10px; padding: 6px 12px; font-size: 0.8rem; }
+            .settings-btn { top: 10px; right: 10px; }
+            .modal { padding: 20px; }
         }
     </style>
 </head>
 <body>
 
-    <button class="theme-toggle" onclick="toggleTheme()">
-        <span class="icon">🌙</span>
-        <span class="label">Dark</span>
-    </button>
+    <button class="settings-btn" onclick="openSettings()" title="Settings">⚙️</button>
+
+    <!-- Settings Modal -->
+    <div class="modal-overlay" id="settingsModal">
+        <div class="modal">
+            <h2>
+                ⚙️ Settings
+                <button class="modal-close" onclick="closeSettings()">×</button>
+            </h2>
+
+            <div class="setting-group">
+                <label class="setting-label">Theme</label>
+                <div class="theme-options">
+                    <button class="theme-option" data-theme="system" onclick="setTheme('system')">
+                        <span class="icon">💻</span>
+                        System
+                    </button>
+                    <button class="theme-option" data-theme="light" onclick="setTheme('light')">
+                        <span class="icon">☀️</span>
+                        Light
+                    </button>
+                    <button class="theme-option" data-theme="dark" onclick="setTheme('dark')">
+                        <span class="icon">🌙</span>
+                        Dark
+                    </button>
+                </div>
+            </div>
+
+            <div class="setting-group">
+                <div class="toggle-row">
+                    <div class="toggle-text">
+                        Sync with Calculator
+                        <small>Match website theme to Java app</small>
+                    </div>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="syncToggle" onchange="toggleSync()">
+                        <span class="toggle-slider"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="hero">
         <h1>Scientific Calculator</h1>
@@ -262,22 +471,70 @@
     </footer>
 
     <script>
-        // Theme Toggle Logic
-        function toggleTheme() {
-            document.body.classList.toggle('light-mode');
-            const isLight = document.body.classList.contains('light-mode');
-            const toggle = document.querySelector('.theme-toggle');
-            toggle.querySelector('.icon').textContent = isLight ? '☀️' : '🌙';
-            toggle.querySelector('.label').textContent = isLight ? 'Light' : 'Dark';
-            localStorage.setItem('theme', isLight ? 'light' : 'dark');
+        // Settings State
+        let currentTheme = localStorage.getItem('theme') || 'system';
+        let syncEnabled = localStorage.getItem('syncEnabled') === 'true';
+
+        // Modal Controls
+        function openSettings() {
+            document.getElementById('settingsModal').classList.add('active');
         }
 
-        // Load saved theme preference
-        if (localStorage.getItem('theme') === 'light') {
-            document.body.classList.add('light-mode');
-            document.querySelector('.theme-toggle .icon').textContent = '☀️';
-            document.querySelector('.theme-toggle .label').textContent = 'Light';
+        function closeSettings() {
+            document.getElementById('settingsModal').classList.remove('active');
         }
+
+        // Close modal on overlay click
+        document.getElementById('settingsModal').addEventListener('click', (e) => {
+            if (e.target === e.currentTarget) closeSettings();
+        });
+
+        // Theme Management
+        function setTheme(theme) {
+            currentTheme = theme;
+            localStorage.setItem('theme', theme);
+            applyTheme();
+            updateThemeUI();
+        }
+
+        function applyTheme() {
+            let isDark;
+            if (currentTheme === 'system') {
+                isDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+            } else {
+                isDark = currentTheme === 'dark';
+            }
+            document.body.classList.toggle('light-mode', !isDark);
+        }
+
+        function updateThemeUI() {
+            document.querySelectorAll('.theme-option').forEach(btn => {
+                btn.classList.toggle('active', btn.dataset.theme === currentTheme);
+            });
+        }
+
+        // Sync Toggle
+        function toggleSync() {
+            syncEnabled = document.getElementById('syncToggle').checked;
+            localStorage.setItem('syncEnabled', syncEnabled);
+            // Note: Actual sync with Java app would require CheerpJ interop
+            // This stores the preference for potential future implementation
+        }
+
+        // Initialize on page load
+        function initSettings() {
+            applyTheme();
+            updateThemeUI();
+            document.getElementById('syncToggle').checked = syncEnabled;
+        }
+
+        // Listen for system theme changes
+        window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', () => {
+            if (currentTheme === 'system') applyTheme();
+        });
+
+        // Run initialization
+        initSettings();
 
         // CheerpJ Initialization
         (async function() {
